# opencv-cpp-examples

./: 1.1-helloworld.cpp  CMakeLists.txt
